--- a/src/overlay/index.html
+++ b/src/overlay/index.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Steadi Overlay</title>
-    <style>
-      html, body { background: transparent; margin: 0; overflow: hidden; }
-    </style>
+    <!-- Base styles provided by globals.css (imported via main.tsx) -->
   </head>
   <body>
     <div id="root"></div>
